kyverno-automation/resources/require-resources/pod-without-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-resources
spec:
  containers:
    - name: nginx
      image: nginx:1.25
