kyverno-automation/tests/require-resources/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-resources
policies:
  - ../../policies/clusterpolicies/require-resources.yaml
resources:
  - ../../resources/require-resources/pod-without-resources.yaml
  - ../../resources/require-resources/pod-with-resources.yaml
  - ../../resources/require-resources/pod-only-request-resource.yaml
results:
  - policy: require-resources
    rule: require-cpu-memory-requests-limits
    resources:
      - default/pod-without-resources
    kind: Pod
    result: fail

  - policy: require-resources
    rule: require-cpu-memory-requests-limits
    resources:
      - default/pod-with-resources
    kind: Pod
    result: pass

  - policy: require-resources
    rule: require-cpu-memory-requests-limits
    resources:
      - default/pod-only-request-resource
    kind: Pod
    result: fail
